[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Effects/bullet.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyBullet.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 2.0

[sub_resource type="CircleShape2D" id=5]
radius = 2.0

[node name="EnemyBullet" instance=ExtResource( 1 )]
collision_mask = 0
script = ExtResource( 3 )
SPEED = 30

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 3 )
animation = "Animate"
playing = true

[node name="Collider" parent="." index="2"]
shape = SubResource( 4 )

[node name="Hitbox" parent="." index="3"]
collision_mask = 5

[node name="Collider" parent="Hitbox" index="0"]
shape = SubResource( 5 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]
